Addded a order list for directions

--- a/recipes/Guacamole.html
+++ b/recipes/Guacamole.html
@@ -12,14 +12,20 @@
     <p>In this recipe you will get restaurant-worthy guacamole in just a few ingredients. You'll be surprised how easy it is to make this top-rated guacamole recipe. You'll come back to it again and again!</p>
     <h3>Ingredients list</h3>
     <ul>
-        <li>Avocados</li>
-        <li>Lime</li>
-        <li>Salt</li>
-        <li>Vegatables</li>
-        <li>Herbs and spices</li>
+        <li>3 Avocados</li>
+        <li>1 Lime</li>
+        <li>1 tes spoon of Salt</li>
+        <li>2 roma tomatoes</li>
+        <li>3 tablespoons chopped cilantro</li>
+        <li>1 teaspoong minced garlic</li>
+        <li>1 pinch ground cayenne pepper</li>
         <salt></salt>
     </ul>
     <h3>Steps to make</h3>
+    <ol>
+        <li>Mash avocados, lime juice, and sal together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Sir in cayenne pepper.</li>
+        <li>Serve immediately, or cover and refrigerate for 1 hour for improved flavor</li>
+    </ol>
 
 </body>
 </html>
