--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/Guacamole.html">Guacamole Recipe</a>
+    <ul>
+        <li><a href="recipes/Guacamole.html">Guacamole Recipe</a></li>
+        <li><a href="recipes/Chicken_Flautas.html">Chicken Flautas Recipe</a></li>
+    </ul>
     </body>
 </html>
