Added a href to Chocolate cake page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="recipes/Guacamole.html">Guacamole Recipe</a></li>
         <li><a href="recipes/Chicken_Flautas.html">Chicken Flautas Recipe</a></li>
+        <li><a href="recipes/choco_cake.html">Flourless Chocolate Cake</a></li>
     </ul>
     </body>
 </html>
