--- a/recipes/Chicken_Flautas.html
+++ b/recipes/Chicken_Flautas.html
@@ -26,7 +26,7 @@
             <li>8 flour tortillas</li>
             <li>toothpicks</li>
         </ul>
-        <h3>Direcitons</h3>
+        <h3>Directions</h3>
         <ol>
             <li>Melt butter in a skillet over medium heat; stir in flour until smooth. Add onion; cook and stir until onion is softened, 5 to 10 minutes. Add black olives, lemon juice, 1 tablespoon oil, paprika, black pepper, and salt; cook and stir until heated through, about 2 minutes. Stir in chicken; remove the skillet from heat and cover.</li>
             <li>Heat oil in a large, heavy saucepan or deep fryer over medium-high heat.</li>
