Added a ul list and ol list with headings

--- a/recipes/choco_cake.html
+++ b/recipes/choco_cake.html
@@ -9,6 +9,26 @@
         <img src="../rec_img/cake.webp" alt="Chocolate cake with raspberry and red drizzle on top">
         <h2>Description</h2>
         <p>This flourless chocolate cake is rich, dense, and full of intense chocolatey flavor.</p>
-        <p>This flourless chocolate cake is considered gluten-free. However, it's important to note that some ingredients may not be processed in gluten-free facilities — so it's always best to check with the manufacturer if the package isn't labeled "gluten-free."</p>
+        <p>Flourless chocolate cake is considered gluten-free. However, it's important to note that some ingredients may not be processed in gluten-free facilities — so it's always best to check with the manufacturer if the package isn't labeled "gluten-free."</p>
+        <h3>Ingredients List</h3>
+        <ul>
+            <li>¾ cup white sugar</li>
+            <li>½ cup water</li>
+            <li>¼ teaspoon salt</li>
+            <li>18 (1 ounce) squares bittersweet chocolate</li>
+            <li>1 cup unsalted butter</li>
+            <li>6 eggs</li>
+        </ul>
+        <h3>Directions</h3>
+        <ol>
+            <li>Preheat the oven to 300 degrees F (150 degrees C). Grease a 10-inch round cake pan; set aside.</li>
+            <li>Combine sugar, water, and salt in a small saucepan over medium heat. Stir until completely dissolved; set aside.</li>
+            <li>Melt bittersweet chocolate in a microwave-safe glass or ceramic bowl in 15-second intervals, stirring after each interval, 1 to 3 minutes. Pour chocolate into the bowl of an electric mixer.</li>
+            <li>Cut butter into pieces; beat butter, one piece at a time, into chocolate until combined. Beat in hot sugar water. Slowly beat in eggs, one at a time.</li>
+            <li>Pour batter into the prepared cake pan. Have a pan larger than the cake pan ready; put the cake pan in the larger pan and fill the larger pan with boiling water halfway up the sides of the cake pan.</li>
+            <li>Bake cake in the water bath in the preheated oven for 45 minutes. The center will still look wet. Place cake in the refrigerator until thoroughly chilled, 8 hours to overnight.</li>
+            <li>To unmold, dip the bottom of the cake pan in hot water for 10 seconds and invert onto a serving plate.</li>
+        </ol>
+
     </body>
 </html>
